--- a/FrontEnd/templates/covid.html
+++ b/FrontEnd/templates/covid.html
@@ -6,18 +6,125 @@
 
 {% block conteudo %}
  
-<div class="Main">
-<h2>
-    <div class="row">
-        <div"><img src="../static/img/sobreinfo.png" alt="Informações" style="width:100%"></div></a>
-        <div><a href='https://www.gov.br/saude/pt-br/coronavirus/sintomas#:~:text=Caracterizado%20a%20partir%20da%20presença,%2C%20fadiga%20e%2Fou%20cefaleia.'><img src="../static/img/sintomas.png" alt="Sintomas" style="width:100%"></div></a>
-        <div><img src="../static/img/comoseprevinir.png" alt="Como se prevenir" style="width:100%"></div></a>
 
-    </div>
-</h2>
-   
 
+<div class="texto">
+    <div>
+        <h1>+ Sobre a covid-19:</h1>
+        <hr>
+        <h2>A COVID-19 é uma doença infecciosa causada pelo coronavírus SARS-CoV-2, que foi descoberto pela primeira vez na cidade chinesa de Wuhan, em dezembro de 2019. Desde então, a doença se espalhou rapidamente pelo mundo, tornando-se uma pandemia global em março de 2020.
+        <br>
+        <br>
+        Os sintomas da COVID-19 variam de leves a graves e podem incluir febre, tosse, dificuldade para respirar, fadiga, dor de cabeça, perda do olfato ou paladar, dor de garganta, dores musculares, calafrios, entre outros. Algumas pessoas infectadas não apresentam sintomas, mas ainda assim podem transmitir o vírus para outras pessoas.
+        <br>
+        <br>
+        A COVID-19 se espalha principalmente de pessoa para pessoa por meio de gotículas respiratórias que são expelidas quando uma pessoa infectada tosse, espirra, fala ou respira.
+        Também é possivel contrair o virus tocando em superfícies contaminadas e, em seguida, tocando no rosto.
+        <br>
+        <br>
+        Para prevenir a propagação da COVID-19, é importante seguir as medidas de precaução, como lavar as mãos com frequência, usar máscaras faciais, praticar o distanciamento social e evitar grandes aglomerações. A vacinação também é uma ferramenta crucial na luta contra a pandemia, pois ajuda a reduzir a gravidade da doença e a prevenir a disseminação do vírus.
+        <br>
+        <br>
+        Embora a COVID-19 tenha causado muitas mortes e transtornos em todo o mundo, os avanços na pesquisa e na medicina estão ajudando a combater a doença e a melhorar as taxas de sobrevivência. É importante continuar seguindo as medidas de precaução e trabalhar juntos para superar esta pandemia.
+    </h2>
+        <br>
+        <br>
+        <br>
+   </div>
 </div>
+
+<div class="texto">
+    <div>
+        <h1>O que é a covid-longa?</h1>
+        <hr>
+        <h2>
+        Algumas pessoas que foram infectadas pelo SARS CoV-2, vírus que causa a COVID-19, têm experienciado sintomas mesmo após o final de sua infecção. Esse efeito a longo prazo ficou conhecido pelos termos “pós-Covid” ou “Covid longa”, condição reconhecida pela Organização Mundial de Saúde desde outubro de 2021. Os sinais e sintomas da Covid longa podem incluir manifestações novas ou a persistência daquelas que apareceram durante a infecção.
+        </h2>
+        <br>
+        <br>
+        <br>
+   </div>
+</div>
+
+<div class="btn"><a href="https://www.pfizer.com.br/noticias/ultimas-noticias/covid-longa#:~:text=Algumas%20pessoas%20que%20foram%20infectadas,Sa%C3%BAde%20desde%20outubro%20de%202021."><button id="botao">Fonte</button></a></div>
+
+
+<div class="texto">
+    <div>
+        <h1>Sintomas da covid-19:</h1>
+        <hr>
+        <h2>
+            <ul>
+               <li>Tosse</li>
+               <li>Febre</li>
+                <li>Coriza</li>
+                <li>Dor de garganta</li>
+                <br>
+                <li>Dificuldade para respirar</li>
+                <li>Perda de olfato e paladar</li>
+                <li>Náuseas, vomito e diarréia</li>
+                <li>Cansaço e diminuição do apetite</li>
+            </ul>
+        </h2>
+        <br>
+        <br>
+        <br>
+   </div>
+</div>
+
+<div class="btn"><a href="https://www.gov.br/saude/pt-br/coronavirus/sintomas#:~:text=Caracterizado%20a%20partir%20da%20presença,%2C%20fadiga%20e%2Fou%20cefaleia."><button id="botao">Fonte</button></a></div>
+
+<div class="texto">
+    <div>
+        <h1>Sintomas da covid longa:</h1>
+        <hr>
+        <h2>
+            <ul>
+               <li>Mal-estar pós-esforço</li>
+               <li>Fadiga</li>
+                <li>Confusão mental</li>
+                <li>Tontura</li>
+                <li>Alterações gastrointestinais</li>
+                <li>Palpitações cardíacas</li>
+                <li>Problemas com desejo ou capacidade sexual</li>
+                <li>Perda de olfato ou paladar</li>
+                <li>Sede</li>
+                <li>Tosse crônica</li>
+                <li>Dor no peito</li>
+                <li>Movimentos anormais.</li>
+            </ul>
+        </h2>
+        <br>
+        <br>
+        <br>
+   </div>
+</div>
+
+<div class="btn"><a href="https://www.cnnbrasil.com.br/saude/conheca-os-12-sintomas-que-definem-a-covid-longa-segundo-um-novo-estudo/#:~:text=Ao%20longo%20dos%20%C3%BAltimos%20tr%C3%AAs,anos%20ap%C3%B3s%20a%20infec%C3%A7%C3%A3o%20inicial."><button id="botao">Fonte</button></a></div>
+
+<div class="texto">
+    <div>
+        <h1>Como se previnir:</h1>
+        <hr>
+        <h2>
+            <ul>
+               <li>Lavar as mãos frequentemente</li>
+               <li>Usar álcool em gel</li>
+                <li>Evitar tocar nos olhos, nariz e boca</li>
+                <li>Evitar contato com pessoas doentes e aglomerações</li>
+                <li>Permanecer em casa quando estiver doente</li>
+                <li>Cobrir o nariz e a boca quando tossir e/ou espirrar</li>
+                <li>Limpar e desinfetar objetos e superfícies tocadas com frequência</li>
+                <li>Vacinando-se</li>
+
+            </ul>
+        </h2>
+        <br>
+        <br>
+        <br>
+   </div>
+</div>
+</body>
 
 
 {% endblock %}
