--- a/FrontEnd/templates/covid.html
+++ b/FrontEnd/templates/covid.html
@@ -46,7 +46,7 @@
    </div>
 </div>
 
-<div class="btn"><a href="https://www.pfizer.com.br/noticias/ultimas-noticias/covid-longa#:~:text=Algumas%20pessoas%20que%20foram%20infectadas,Sa%C3%BAde%20desde%20outubro%20de%202021."><button id="botao">Fonte</button></a></div>
+<div class="btn"><a href="https://www.pfizer.com.br/noticias/ultimas-noticias/covid-longa#:~:text=Algumas%20pessoas%20que%20foram%20infectadas,Sa%C3%BAde%20desde%20outubro%20de%202021." target="_blank"><button id="botao">Fonte</button></a></div>
 
 
 <div class="texto">
@@ -72,7 +72,7 @@
    </div>
 </div>
 
-<div class="btn"><a href="https://www.gov.br/saude/pt-br/coronavirus/sintomas#:~:text=Caracterizado%20a%20partir%20da%20presença,%2C%20fadiga%20e%2Fou%20cefaleia."><button id="botao">Fonte</button></a></div>
+<div class="btn"><a href="https://www.gov.br/saude/pt-br/coronavirus/sintomas#:~:text=Caracterizado%20a%20partir%20da%20presença,%2C%20fadiga%20e%2Fou%20cefaleia." target="_blank"><button id="botao">Fonte</button></a></div>
 
 <div class="texto">
     <div>
@@ -100,7 +100,7 @@
    </div>
 </div>
 
-<div class="btn"><a href="https://www.cnnbrasil.com.br/saude/conheca-os-12-sintomas-que-definem-a-covid-longa-segundo-um-novo-estudo/#:~:text=Ao%20longo%20dos%20%C3%BAltimos%20tr%C3%AAs,anos%20ap%C3%B3s%20a%20infec%C3%A7%C3%A3o%20inicial."><button id="botao">Fonte</button></a></div>
+<div class="btn"><a href="https://www.cnnbrasil.com.br/saude/conheca-os-12-sintomas-que-definem-a-covid-longa-segundo-um-novo-estudo/#:~:text=Ao%20longo%20dos%20%C3%BAltimos%20tr%C3%AAs,anos%20ap%C3%B3s%20a%20infec%C3%A7%C3%A3o%20inicial." target="_blank"><button id="botao">Fonte</button></a></div>
 
 <div class="texto">
     <div>
